examples/datalog/18_advanced_patterns/125_row_number_sim.dl
% Test: Row number simulation
% Expected: Assign sequential numbers
% Category: 18_advanced_patterns
% Priority: P2 - Advanced patterns

.kg create test_rownum
.kg use test_rownum

+data[(5, "E"), (3, "C"), (1, "A"), (4, "D"), (2, "B")].

% Count rows with smaller id (gives position - 1)
+row_pos(Id, Name, <COUNT:OtherId>) :- data(Id, Name), data(OtherId, _), OtherId < Id.

?- row_pos(Id, Name, Pos).

.kg use default
.kg drop test_rownum
